--- a/module_realtime/src/main/res/layouts/fragments/layout/realtime_main_fragment.xml
+++ b/module_realtime/src/main/res/layouts/fragments/layout/realtime_main_fragment.xml
@@ -29,6 +29,37 @@
 
         </com.yanzhenjie.recyclerview.SwipeRecyclerView>
 
+
+
+        <com.yanzhenjie.recyclerview.SwipeRecyclerView
+            android:id="@+id/rv_phrase_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/base_round"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            >
+
+        </com.yanzhenjie.recyclerview.SwipeRecyclerView>
+
+        <com.yanzhenjie.recyclerview.SwipeRecyclerView
+            android:id="@+id/rv_novel_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/base_round"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            >
+
+        </com.yanzhenjie.recyclerview.SwipeRecyclerView>
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
