--- a/module_realtime/src/main/res/layouts/adapters/layout/realtime_hot_item.xml
+++ b/module_realtime/src/main/res/layouts/adapters/layout/realtime_hot_item.xml
@@ -15,13 +15,14 @@
 
         <TextView
             android:id="@+id/tv_real_time_rank"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/base_baidu_real_time_top"
-            android:layout_marginLeft="@dimen/realtime_tv_rank_margin_left"/>
+            android:layout_marginLeft="@dimen/realtime_tv_rank_margin_left"
+           />
 
 
         <TextView
@@ -37,6 +38,43 @@
             android:layout_marginLeft="@dimen/realtime_tv_title_margin_left"/>
 
 
+
+
+        <ImageView
+            android:id="@+id/iv_hot_rank_express"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/tv_real_time_title"
+            android:layout_marginLeft="@dimen/realtime_iv_hot_rank_express_margin_left"
+            android:visibility="invisible"/>
+        <TextView
+            android:id="@+id/tv_real_time_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/realtime_tv_desc_text_size"
+            android:textColor="@color/realtime_tv_desc_color"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/iv_hot_rank_express"
+            app:layout_constraintRight_toLeftOf="@id/iv_hot_rank_tag"
+            android:layout_marginRight="@dimen/realtime_tv_real_time_desc_margin_right"
+            android:layout_marginLeft="@dimen/realtime_tv_real_time_desc_margin_left"
+            android:maxLines="1"
+            android:ellipsize="end"/>
+
+
+        <ImageView
+            android:id="@+id/iv_hot_rank_tag"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="@dimen/realtime_iv_hot_rank_tag_margin_right"
+            android:visibility="invisible"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
