--- a/module_realtime/src/main/res/values-night/colors.xml
+++ b/module_realtime/src/main/res/values-night/colors.xml
@@ -2,4 +2,8 @@
 <resources>
 
     <color name="realtime_tv_title_color">#D3D3D3</color>
+    <color name="realtime_tv_foot_title_color">#D3D3D3</color>
+    <color name="realtime_tv_desc_color">#666666</color>
+    <color name="realtime_tv_novel_movie_title_color">#D3D3D3</color>
+    <color name="realtime_tv_novel_movie_desc_color">#666666</color>
 </resources>
