--- a/module_realtime/src/main/res/values/dimens.xml
+++ b/module_realtime/src/main/res/values/dimens.xml
@@ -13,4 +13,14 @@
     <dimen name="realtime_iv_icon_margin_left">5dp</dimen>
     <dimen name="realtime_ct_item_height">44dp</dimen>
     <dimen name="realtime_tv_title_text_size">16sp</dimen>
+    <dimen name="realtime_iv_hot_rank_express_margin_left">5dp</dimen>
+    <dimen name="realtime_iv_hot_rank_tag_margin_right">10dp</dimen>
+    <dimen name="realtime_tv_desc_text_size">14sp</dimen>
+    <dimen name="realtime_tv_real_time_desc_margin_left">2dp</dimen>
+    <dimen name="realtime_tv_real_time_desc_margin_right">5dp</dimen>
+    <dimen name="realtime_tv_rank_position_width">30dp</dimen>
+    <dimen name="realtime_tv_rank_position_height">30dp</dimen>
+    <dimen name="realtime_realtime_tv_rank_position_text_size">14sp</dimen>
+    <dimen name="realtime_realtime_tv_rank_position_padding_left">5dp</dimen>
+    <dimen name="realtime_novel_movie_desc_text_size">14sp</dimen>
 </resources>
