--- a/module_realtime/src/main/res/values-night/colors.xml
+++ b/module_realtime/src/main/res/values-night/colors.xml
@@ -6,4 +6,6 @@
     <color name="realtime_tv_desc_color">#666666</color>
     <color name="realtime_tv_novel_movie_title_color">#D3D3D3</color>
     <color name="realtime_tv_novel_movie_desc_color">#666666</color>
+    <color name="realtime_tv_rank_hot_score_text_color">#D3D3D3</color>
+    <color name="realtime_tv_rank_hot_score_title_text_color">#666666</color>
 </resources>
