--- a/module_realtime/src/main/res/values-night/colors.xml
+++ b/module_realtime/src/main/res/values-night/colors.xml
@@ -8,4 +8,7 @@
     <color name="realtime_tv_novel_movie_desc_color">#666666</color>
     <color name="realtime_tv_rank_hot_score_text_color">#D3D3D3</color>
     <color name="realtime_tv_rank_hot_score_title_text_color">#666666</color>
+    <color name="realtime_novel_tab_bg">#666666</color>
+    <color name="realtime_novel_text_select_color">#F84C48</color>
+    <color name="realtime_novel_text_unselect_color">#333333</color>
 </resources>
