完善热搜api到小说tab(80%)

--- a/module_realtime/src/main/res/layouts/fragments/layout/realtime_home_fragment.xml
+++ b/module_realtime/src/main/res/layouts/fragments/layout/realtime_home_fragment.xml
@@ -40,6 +40,7 @@
                 app:elevation="0dp">
 
                 <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/realtime_collapse_tb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fitsSystemWindows="true"
