--- a/module_realtime/src/main/res/values-night/colors.xml
+++ b/module_realtime/src/main/res/values-night/colors.xml
@@ -11,4 +11,8 @@
     <color name="realtime_novel_tab_bg">#666666</color>
     <color name="realtime_novel_text_select_color">#F84C48</color>
     <color name="realtime_novel_text_unselect_color">#333333</color>
+    <color name="realtime_movie_category_select">#F84C48</color>
+    <color name="realtime_movie_category_unselect">#1F1F1F</color>
+    <color name="realtime_movie_chip_background">#F5F5F5</color>
+    <color name="realtime_indicator_background">#D3D3D3</color>
 </resources>
