--- a/module_realtime/src/main/res/values-night/colors.xml
+++ b/module_realtime/src/main/res/values-night/colors.xml
@@ -15,4 +15,14 @@
     <color name="realtime_movie_category_unselect">#1F1F1F</color>
     <color name="realtime_movie_chip_background">#F5F5F5</color>
     <color name="realtime_indicator_background">#D3D3D3</color>
+
+    <color name="realtime_tv_car_name_color">#D3D3D3</color>
+    <color name="realtime_tv_car_desc_color">#666666</color>
+        <color name="realtime_tv_rank_car_hot_score_text_color">#D3D3D3</color>
+        <color name="realtime_tv_rank_car_hot_score_title_text_color">#666666</color>
+
+            <color name="realtime_tv_game_name_color">#D3D3D3</color>
+            <color name="realtime_tv_game_desc_color">#666666</color>
+                <color name="realtime_tv_rank_game_hot_score_text_color">#D3D3D3</color>
+                <color name="realtime_tv_rank_game_hot_score_title_text_color">#666666</color>
 </resources>
