完善热搜api到小说tab(100%) 解决快速点击事件没有屏蔽问题

--- a/module_realtime/src/main/res/layouts/fragments/layout/realtime_main_fragment.xml
+++ b/module_realtime/src/main/res/layouts/fragments/layout/realtime_main_fragment.xml
@@ -93,6 +93,7 @@
             android:paddingBottom="@dimen/realtime_ll_teleplay_car_padding_bottom">
 
             <RelativeLayout
+                android:id="@+id/rl_main_teleplay"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/realtime_rl_teleplay_margin_left"
@@ -127,6 +128,7 @@
 
 
             <RelativeLayout
+                android:id="@+id/rl_main_car"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/realtime_rl_car_margin_left"
