--- a/module_web/src/main/res/layouts/activitys/layout/web_article_activity.xml
+++ b/module_web/src/main/res/layouts/activitys/layout/web_article_activity.xml
@@ -1,35 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.knight.kotlin.module_web.activity.WebArticleActivity"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout>
+
+    <data>
 
 
-    <include
-        android:id="@+id/web_toolbar"
-        layout="@layout/base_include_toolbar"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <variable
+            name="title"
+            type="java.lang.String" />
+    </data>
 
-    <com.knight.kotlin.library_widget.LoveAnimatorRelativeLayout
-        android:id="@+id/web_like_rl"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context="com.knight.kotlin.module_web.activity.WebArticleActivity"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/web_toolbar">
+        android:layout_height="match_parent">
 
 
-        <com.knight.kotlin.library_widget.WebContainer
-            android:id="@+id/web_ll"
+        <include
+            android:id="@+id/web_toolbar"
+            layout="@layout/base_include_toolbar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@{title}"/>
+
+        <com.knight.kotlin.library_widget.LoveAnimatorRelativeLayout
+            android:id="@+id/web_like_rl"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/web_toolbar">
 
-    </com.knight.kotlin.library_widget.LoveAnimatorRelativeLayout>
+
+            <com.knight.kotlin.library_widget.WebContainer
+                android:id="@+id/web_ll"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"/>
+
+        </com.knight.kotlin.library_widget.LoveAnimatorRelativeLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
+
+
