--- a/module_home/src/main/res/layouts/dialogs/layout/home_today_weather_news_dialog.xml
+++ b/module_home/src/main/res/layouts/dialogs/layout/home_today_weather_news_dialog.xml
@@ -5,8 +5,13 @@
     android:layout_height="320dp">
 
 
-    <include layout="@layout/home_today_news_item" />
-    <include layout="@layout/home_today_weather_item" />
+    <include
+        android:id="@+id/home_today_news_item"
+        layout="@layout/home_today_news_item" />
+
+    <include
+        android:id="@+id/home_today_weather_item"
+        layout="@layout/home_today_weather_item" />
 
 
 </com.knight.kotlin.library_widget.EasyFlipView>
