--- a/module_home/src/main/res/layouts/items/layout/home_today_weather_item.xml
+++ b/module_home/src/main/res/layouts/items/layout/home_today_weather_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="340dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:background="@android:color/white">
+    >
 
 
 
@@ -17,13 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:background="@color/base_color_theme"/>
+        />
 
     <TextView
         android:id="@+id/tv_week_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="星期四"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="10dp"
@@ -41,12 +40,11 @@
         android:id="@+id/tv_today_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="星期四"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_week_day"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:textSize="36sp"
+        android:textSize="66sp"
         android:shadowColor="#80000000"
         android:shadowDx="1"
         android:shadowDy="1"
@@ -58,7 +56,6 @@
         android:id="@+id/tv_today_weather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="星期四"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_today_temperature"
         android:layout_marginLeft="10dp"
@@ -79,7 +76,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_today_weather"
-        android:text="未来两小时无降雨"
         android:textSize="@dimen/base_dimen_16"
         android:drawableLeft="@drawable/home_icon_rainfall"
         android:shadowColor="#80000000"
@@ -90,19 +86,23 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_tip_info"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:gravity="start"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@id/tv_rain_info"
-        android:text="       今天最高温28°，最低温23°，多喝水，多运动，注意补充水分，保持新起愉悦"
         android:textSize="18sp"
         android:shadowColor="#80000000"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="2"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+     />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
