--- a/module_home/src/main/res/values/colors.xml
+++ b/module_home/src/main/res/values/colors.xml
@@ -52,5 +52,6 @@
      <color name="home_eyepetizer_category_color">#83838E</color>
      <color name="home_tv_weather_index_name_color">#9E9E9E</color>
      <color name="home_tv_weather_index_info">#333333</color>
-
+     <color name="home_tv_weather_new_title_text_color">#333333</color>
+     <color name="home_tv_weather_new_title_bg">#ffffff</color>
 </resources>
