--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -248,4 +248,30 @@
      <dimen name="home_iv_weather_index_icon_width">32dp</dimen>
      <dimen name="home_iv_weather_index_icon_height">32dp</dimen>
      <dimen name="home_iv_weather_index_icon_margin_top">20dp</dimen>
+     <dimen name="home_fp_weather_margin_top">20dp</dimen>
+     <dimen name="home_fp_weather_margin_left">10dp</dimen>
+     <dimen name="home_fp_weather_margin_right">10dp</dimen>
+     <dimen name="home_iv_weather_news_close_width">32dp</dimen>
+     <dimen name="home_iv_weather_news_close_height">32dp</dimen>
+     <dimen name="home_iv_weather_news_margin_top">10dp</dimen>
+     <dimen name="home_tv_news_top_text_size">18sp</dimen>
+     <dimen name="home_tv_news_top_padding_left">10dp</dimen>
+     <dimen name="home_tv_week_day_text_size">26sp</dimen>
+     <dimen name="home_tv_week_day_margin_left">10dp</dimen>
+     <dimen name="home_tv_week_day_margin_top">10dp</dimen>
+     <dimen name="home_tv_today_temperature_text_size">66sp</dimen>
+     <dimen name="home_tv_today_temperature_margin_left">10dp</dimen>
+     <dimen name="home_tv_today_temperature_margin_top">10dp</dimen>
+     <dimen name="home_tv_today_weather_margin_left">10dp</dimen>
+     <dimen name="home_tv_today_weather_margin_top">10dp</dimen>
+     <dimen name="home_tv_today_weather_text_size">22sp</dimen>
+     <dimen name="home_tv_rain_info_margin_left">10dp</dimen>
+     <dimen name="home_tv_rain_info_margin_top">10dp</dimen>
+     <dimen name="home_tv_rain_info_text_size">16sp</dimen>
+     <dimen name="home_tv_tip_info_margin_left">10dp</dimen>
+     <dimen name="home_tv_tip_info_margin_right">10dp</dimen>
+     <dimen name="home_tv_tip_info_margin_top">40dp</dimen>
+     <dimen name="home_tv_tip_info_text_size">18sp</dimen>
+     <dimen name="home_icon_zaobao_margin_top">15dp</dimen>
+     <dimen name="home_icon_zaobao_margin_right">15dp</dimen>
 </resources>
