--- a/module_home/src/main/res/layouts/items/layout/home_today_news_item.xml
+++ b/module_home/src/main/res/layouts/items/layout/home_today_news_item.xml
@@ -9,14 +9,35 @@
 
 
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_zaobao_head"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:shapeAppearance="@style/home_news_weather_TopRoundedCorners"
        />
+
+
+    <TextView
+        android:id="@+id/tv_news_top"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="这是新闻"
+        android:textSize="@dimen/home_tv_news_top_text_size"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_zaobao_head"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/home_tv_news_top_padding_left"
+        android:textStyle="bold"
+        android:textColor="@color/home_tv_weather_new_title_text_color"
+        android:background="@drawable/home_news_bg_shape"
+        android:maxLines="3"
+        android:ellipsize="end"
+        />
 
 
 
