--- a/module_home/src/main/res/layouts/items/layout/home_today_weather_item.xml
+++ b/module_home/src/main/res/layouts/items/layout/home_today_weather_item.xml
@@ -10,7 +10,7 @@
 
 
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_today_bg"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:shapeAppearance="@style/home_news_weather_RoundedCorners"
 
         />
 
@@ -28,8 +29,8 @@
         android:background="@drawable/home_icon_zaobao"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"/>
+        android:layout_marginTop="@dimen/home_icon_zaobao_margin_top"
+        android:layout_marginRight="@dimen/home_icon_zaobao_margin_right"/>
 
     <TextView
         android:id="@+id/tv_week_day"
@@ -37,9 +38,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:textSize="26sp"
+        android:layout_marginLeft="@dimen/home_tv_week_day_margin_left"
+        android:layout_marginTop="@dimen/home_tv_week_day_margin_top"
+        android:textSize="@dimen/home_tv_week_day_text_size"
         android:shadowColor="#80000000"
         android:shadowDx="1"
         android:shadowDy="1"
@@ -54,9 +55,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_week_day"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:textSize="66sp"
+        android:layout_marginLeft="@dimen/home_tv_today_temperature_margin_left"
+        android:layout_marginTop="@dimen/home_tv_today_temperature_margin_top"
+        android:textSize="@dimen/home_tv_today_temperature_text_size"
         android:shadowColor="#80000000"
         android:shadowDx="1"
         android:shadowDy="1"
@@ -70,9 +71,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_today_temperature"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:textSize="22sp"
+        android:layout_marginLeft="@dimen/home_tv_today_weather_margin_left"
+        android:layout_marginTop="@dimen/home_tv_today_weather_margin_top"
+        android:textSize="@dimen/home_tv_today_weather_text_size"
         android:shadowColor="#80000000"
         android:shadowDx="1"
         android:shadowDy="1"
@@ -85,10 +86,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="@dimen/home_tv_rain_info_margin_left"
+        android:layout_marginTop="@dimen/home_tv_rain_info_margin_top"
         app:layout_constraintTop_toBottomOf="@id/tv_today_weather"
-        android:textSize="@dimen/base_dimen_16"
+        android:textSize="@dimen/home_tv_rain_info_text_size"
         android:drawableLeft="@drawable/home_icon_rainfall"
         android:shadowColor="#80000000"
         android:shadowDx="1"
@@ -104,11 +105,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:gravity="start"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginLeft="@dimen/home_tv_tip_info_margin_left"
+        android:layout_marginRight="@dimen/home_tv_tip_info_margin_right"
+        android:layout_marginTop="@dimen/home_tv_tip_info_margin_top"
         app:layout_constraintTop_toBottomOf="@id/tv_rain_info"
-        android:textSize="18sp"
+        android:textSize="@dimen/home_tv_tip_info_text_size"
         android:shadowColor="#80000000"
         android:shadowDx="1"
         android:shadowDy="1"
