--- a/module_home/src/main/res/values-night/colors.xml
+++ b/module_home/src/main/res/values-night/colors.xml
@@ -39,4 +39,6 @@
     <color name="home_tv_mylabel_color">#D3D3D3</color>
     <color name="home_tv_morelabel_color">#D3D3D3</color>
     <color name="home_inputlabel_et_color">#D3D3D3</color>
+    <color name="home_tv_weather_new_title_text_color">#D3D3D3</color>
+    <color name="home_tv_weather_new_title_bg">#303030</color>
 </resources>
