--- a/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
+++ b/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
@@ -285,12 +285,35 @@
                     android:scrollbars="none"
                   />
 
+
+             <RelativeLayout
+                 android:id="@+id/rl_sun_moon"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:background="@drawable/home_weather_corners_bg"
+                 app:layout_constraintTop_toBottomOf="@id/weather_view"
+                 android:layout_marginLeft="10dp"
+                 android:layout_marginRight="10dp"
+                 >
+
+                 <com.knight.kotlin.library_widget.weatherview.sunmoon.SunMoonView
+                     android:id="@+id/sun_moon_controlView"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content" />
+
+
+
+
+
+
+             </RelativeLayout>
+
              <com.knight.kotlin.library_widget.weatherview.ScrollBarChartView
                  android:id="@+id/scrbar_chart_view"
                  android:layout_width="0dp"
                  android:layout_height="400dp"
                  android:layout_marginTop="20dp"
-                 app:layout_constraintTop_toBottomOf="@id/weather_view"
+                 app:layout_constraintTop_toBottomOf="@id/rl_sun_moon"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:background="@drawable/home_weather_corners_bg"
