--- a/module_home/src/main/res/layouts/activitys/layout/home_news_activity.xml
+++ b/module_home/src/main/res/layouts/activitys/layout/home_news_activity.xml
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+    <data>
+
+        <variable
+            name="title"
+            type="java.lang.String" />
+
+    </data>
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
 
 
-    <include
-        android:id="@+id/include_news_toolbar"
-        layout="@layout/base_include_toolbar"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        <include
+            android:id="@+id/include_news_toolbar"
+            layout="@layout/base_include_toolbar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@{title}"
+            />
 
-    <include
-        android:id="@+id/include_news"
-        layout="@layout/base_layout_recycleview"
-/>
+        <include
+            android:id="@+id/include_news"
+            layout="@layout/base_layout_recycleview"
+            />
 
-</LinearLayout>
+    </LinearLayout>
+
+</layout>
+
